Corrected alignment of hero and content

--- a/style.css
+++ b/style.css
@@ -25,30 +25,33 @@ ul {
     display: flex;
     flex: 1;
     background-color: #1F2937;
-    padding:0 16px;
+    padding: 0 150px;
     justify-content: space-between;
     align-items: center;
     max-height: 72px;
     height: 72px;
-
+    /* margin-left: 150px; */
+    /* margin-right: 150px; */
 }
 
 .header-logo {
     color: white;
     font-size: 32px;
     font-weight: 900;
+    /* overflow: hidden; */
+    /* min-width: fit-content; */
+    min-width: auto;
 }
 
 .block-one {
     display: flex;
     flex-flow: column wrap;
     background: #1F2937;
-    padding: 16px;
+    padding: 0 100px;
     align-items: flex-start;
     justify-content: center;
     max-height: 150px;
     height: 150px;
-
 }
 
 .block-one-header {
@@ -96,21 +99,44 @@ button {
 }
 
 .box {
-    height: 50px;
-    width: 50px;
+    /* height: 50px; */
+    /* width: 50px; */
     border: solid 3px blue;
-    border-radius: 12px;
+    border-radius: 15px;
     padding: 15px;
-    margin: 10px;
+    margin: 0;
+    height: 175px;
+    width: 175px;
 }
 
 .block-three {
     display: flex;
+    /* flex-direction: column; */
     flex-wrap: wrap;
+    /* justify-content: center; */
+    /* align-items: center; */
+    padding: 15px;
+    margin-left: 50px;
+    margin-right: 50px;
+    /* align-content: space-around; */
+}
+
+.block-three {}
+
+.block-three {
+    /* align-content: center; */
+    /* justify-content: space-between; */
     justify-content: center;
 }
 
+.block-three {}
+
 .box-and-caption {
-
-
+    display: flex;
+    flex-flow: column;
+    flex: 1;
+    /* justify-content: center; */
+    align-items: center;
+    margin: 15px;
+    margin-bottom: 40px;
 }
